--- a/Home.textile
+++ b/Home.textile
@@ -1,1 +1,10 @@
 Welcome to the qtile wiki!
+
+*Features*
+* Simple, small and extensible. It's easy to write your own layouts, widgets and commands.
+* Configured in Python. Command shell that allows all aspects of Qtile to be managed and inspected.
+* Complete remote scriptability - write scripts to set up workspaces, manipulate windows, update status bar widgets and more.
+* Qtile's scriptability has made a thorough unit testing possible, making it one of the best-tested window managers around.
+
+"Main site":http://www.qtile.org/
+"Documentation for developers":http://www.qtile.org/doc-current/index.html
