--- a/Hook-config..textile
+++ b/Hook-config..textile
@@ -1,12 +1,12 @@
 He's how to use hooks...
 
 first, I altered hook.py to include:
-@
-def Hook(event):
+
+@def Hook(event):
     def callHook(f):
         subscribe._subscribe(event, f)
-    return callHook
-@
+    return callHook@
+
 although this does alter the libqtile files though...
 then I put this in my config:
 
