--- a/Hook-config..textile
+++ b/Hook-config..textile
@@ -2,7 +2,7 @@ He's how to use hooks...
 
 first, I altered hook.py to include:
 
-@def Hook(event):@
+bc[python].def Hook(event):
 @    def callHook(f):@
 @        subscribe._subscribe(event, f)@
 @    return callHook@
