--- a/Hook-config..textile
+++ b/Hook-config..textile
@@ -2,7 +2,7 @@ He's how to use hooks...
 
 first, I altered hook.py to include:
 
-bq. def Hook(event):
+pre. def Hook(event):
     def callHook(f):
         subscribe._subscribe(event, f)
     return callHook
