--- a/Home.textile
+++ b/Home.textile
@@ -8,6 +8,7 @@ Welcome to the qtile wiki!
 
 "Main site":http://qtile.org/
 "Documentation for developers":http://docs.qtile.org
+"Forum":http://kobraz.org.ua/qforum/index.php
 
 Discussion/Issue posts:
 [[no-groups?]]
